[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
tonic-prost = "0.14.1"
prost="0.14.1"
prost-types = "0.14.1"
solana-perf = "=2.2"
solana-sdk = "=2.2"
tonic = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.1"
