[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
futures-util = "0.3.28"
jito-protos = { path = "../jito_protos" }
log = "0.4"
prost-types = "0.14.1"
solana-client = "=2.2"
solana-metrics = "=2.2"
solana-sdk = "=2.2"
solana-transaction-status = "=2.2"
thiserror = "2.0.12"
tokio = "1"
tonic = { version = "0.14.1", features = ["tls-native-roots", "tls-webpki-roots"] }
